apps/media/tautulli/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli-dashboard-https
  namespace: media
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: tautulli
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tautulli.saldivar.io`)
      middlewares:
        - name: security
          namespace: kube-system
      services:
        - name: tautulli
          port: http
